--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,10 @@ authors = ["Kyomotoi <kyomotoiowo@gmail.com>"]
 license = "GPLv3"
 readme = "README.md"
 repository = "https://github.com/Kyomotoi/nonebot_plugin_rcnb"
-keywords = ["nonebot", "qq", "qqbot, "mirai", "cqhttp", "rcnb", "rc", "RC"]
+keywords = ["nonebot", "qqbot, "mirai"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "^3.7"
 nonebot2 = "^2.0.0-alpha.6"
 
 [tool.poetry.dev-dependencies]
